--- a/BookingCare/ReactJS/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/BookingCare/ReactJS/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -1,55 +1,68 @@
 .doctor-detail-container {
-    height: 500px;
-    
+  height: 500px;
 
-    .intro-doctor {
-        display: flex;
-        margin: 0 100px;
-        .content-left {
-            width: 20%;
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
-            margin: 10px 20px;
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-
-        .content-right {
-            width: 80%;
-            // border: 1px solid gray;
-            display: flex;
-            flex-direction: column;
-            padding-left: 10px;
-
-            .up {
-                padding-top: 15px;
-                font-size: 20px;
-                font-weight: 600;
-            }
-
-            .down {
-                padding-top: 10px;
-            }
-        }
+  .intro-doctor {
+    display: flex;
+    margin: 0 100px;
+    .content-left {
+      width: 20%;
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      margin: 10px 20px;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: cover;
     }
 
-    .detail-infor-doctor {
-        border-top: 1px solid #ddd;
-        border-bottom: 1px solid #ddd;
-        background-color: #f9f9f9;
-        padding: 10px 100px;
-        p {
-            font-size: 17px;
-        }
+    .content-right {
+      width: 80%;
+      // border: 1px solid gray;
+      display: flex;
+      flex-direction: column;
+      padding-left: 10px;
 
-        img {
-            width: 100%;
-        }
+      .up {
+        padding-top: 15px;
+        font-size: 20px;
+        font-weight: 600;
+      }
+
+      .down {
+        padding-top: 10px;
+      }
+    }
+  }
+
+  .schedule-doctor {
+    margin: 0 100px;
+    display: flex;
+    min-height: 200px;
+    padding: 10px 0;
+
+    .content-left {
+      width: 50%;
+    }
+    .content-right {
+      width: 50%;
+    }
+  }
+
+  .detail-infor-doctor {
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    background-color: #f9f9f9;
+    padding: 10px 100px;
+    p {
+      font-size: 17px;
     }
 
-    .comment-doctor {
-        height: 50px;
+    img {
+      width: 100%;
     }
+  }
+
+  .comment-doctor {
+    height: 50px;
+  }
 }
