--- a/BookingCare/ReactJS/src/containers/HomePage/HomePage.scss
+++ b/BookingCare/ReactJS/src/containers/HomePage/HomePage.scss
@@ -56,7 +56,7 @@
                 background-color: #eee;
 
                 &.section-specialty {
-                    background-image: url('../../assets/specialty/cotsong.jpg');
+                    // background-image: url('../../assets/specialty/cotsong.jpg');
                 }
 
                 &.section-medical-facility {
